# NeverWrite

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Copyright.md  FUNCIONES.md  LICENSE  README.md  arbol-proyecto.md  index.html  package-lock.json
.PERSONAL/plans/: Pendientes cierre multipane.md
.github/: SECURITY.md
.github/workflows/: ci.yml  electron-package-smoke.yml  release-desktop.yml  validate-release-metadata.yml  watch-claude-agent-acp-upstream.yml
apps/desktop/: README.md  electron-builder.config.mjs  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  test_tauri.mjs  tsconfig.app.json  tsconfig.electron.json  tsconfig.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
apps/desktop/config/: desktop-security.json
apps/desktop/legacy-tauri/: README.md  run-tauri.mjs
apps/desktop/native-backend/: Cargo.toml
apps/desktop/native-backend/src/: acp_providers.rs  ai.rs  app_paths.rs  devtools.rs  main.rs  spellcheck.rs
apps/desktop/native-backend/src/ai_history/: attachments.rs  migration.rs  mod.rs  storage.rs
apps/desktop/scripts/: build-electron-release.mjs  build-electron.mjs  electron-builder-config.test.mjs  graceful-shutdown.mjs  postprocess-macos-dmg.mjs  require-npm.mjs  run-electron-dev.mjs  run-tauri.mjs  smoke-electron-ai-runtime.mjs  smoke-electron-vault-editor.mjs  (+10 more)
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/icons/sources/VaultAI-macos26.icon/: icon.json
apps/desktop/src-tauri/src/: branding.rs  clipper_api.rs  file_preview_gateway.rs  frontend_server.rs  lib.rs  main.rs  maps.rs  technical_branding.rs
apps/desktop/src-tauri/src/ai/: ACP.md  auth_terminal.rs  catalog.rs  commands.rs  emit.rs  env.rs  manager.rs  mod.rs  persistence.rs  runtime.rs  secret_store.rs  shared.rs  whisper.rs
apps/desktop/src-tauri/src/ai/claude/: adapter.rs  client.rs  mod.rs  process.rs  setup.rs
apps/desktop/src-tauri/src/ai/codex/: adapter.rs  client.rs  mod.rs  process.rs  setup.rs
apps/desktop/src-tauri/src/ai/gemini/: adapter.rs  client.rs  mod.rs  process.rs  setup.rs
apps/desktop/src-tauri/src/ai/kilo/: adapter.rs  client.rs  mod.rs  process.rs  setup.rs
apps/desktop/src-tauri/src/devtools/: commands.rs  emit.rs  manager.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/spellcheck/: bootstrap_en_us.txt  bootstrap_es_es.txt  bundled.rs  catalog.json  catalog.rs  engine.rs  grammar.rs  language.rs  mod.rs  storage.rs  types.rs
apps/web-clipper/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  wxt.config.ts
apt/: neverwrite.sources.example
crates/ai/: Cargo.toml
crates/diff/: Cargo.toml
crates/index/: Cargo.toml
crates/index/src/: index.rs  lib.rs  resolve.rs  search.rs
crates/index/tests/: integration.rs
crates/state/: Cargo.toml
crates/types/: Cargo.toml
crates/vault/: Cargo.toml
crates/vault/src/: error.rs  lib.rs  note.rs  pdf.rs  vault.rs  watcher.rs
crates/vault/src/parser/: frontmatter.rs  headings.rs  mod.rs  tags.rs  wikilinks.rs
crates/vault/tests/: integration.rs
crates/whisper/: Cargo.toml
crates/whisper/src/: audio.rs  download.rs  lib.rs  manifest.rs
dnf/: neverwrite-archive-keyring.asc  neverwrite.repo.example
dnf/repodata/: repomd.xml  repomd.xml.asc
docs/: README.md  ai-change-control.md  ai-runtime-setup.md  ai-session-history.md  app-logs.md  data-and-privacy.md  editor-architecture.md  neverwrite-phase-1.md  neverwrite-phase-5.md  neverwrite-rewrite.md  project-architecture.md  review-hardening-checklist.md  settings-scope.md  terminal-integration.md  testing.md  troubleshooting.md
plans/: Plan factibilidad tabs de chat por vault.md
release/appcast/: README.md
release/apt/: README.md
release/dnf/: README.md
scripts/: appcast-lib.mjs  appcast.test.mjs  apt-repo.test.mjs  build-appcast-from-target-metadata.mjs  build-appcast-manifest.mjs  build-apt-repository.mjs  build-dnf-repository.mjs  build-platform-validation-pack.mjs  build-release-body.mjs  bump-version.sh  dnf-repo-lib.mjs  dnf-repo.test.mjs  electron-release-lib.mjs  extract-changelog-release-notes.mjs  generate-spellcheck-catalog.mjs  libreoffice-extras.json  platform-validation-lib.mjs  platform-validation.test.mjs  release-assets-lib.mjs  release-assets.test.mjs  release-metadata-lib.mjs  release-metadata.test.mjs  serve-static-directory.mjs  stage-tauri-release-assets.mjs  validate-appcast-manifest.mjs  validate-apt-repository.mjs  validate-dnf-repository.mjs  validate-release-metadata.mjs  watch-claude-agent-acp-upstream.mjs
stable/darwin-universal/: latest-mac.yml
stable/linux-arm64/: latest-linux-arm64.yml  latest-linux.yml
stable/linux-x64/: latest-linux.yml
stable/windows-arm64/: latest.yml
stable/windows-x64/: latest.yml
(+679 files in other folders)
