[package]
name = "vault-ai-index"
version = "0.1.0"
edition = "2021"

[dependencies]
vault-ai-types = { path = "../types" }
vault-ai-vault = { path = "../vault" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
vault-ai-vault = { path = "../vault" }
