[package]
name = "neverwrite-index"
version = "0.1.0"
edition = "2021"

[dependencies]
neverwrite-types = { path = "../types" }
neverwrite-vault = { path = "../vault" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
neverwrite-vault = { path = "../vault" }
