[package]
name = "vault-ai-whisper"
version = "0.1.0"
edition = "2021"

[dependencies]
whisper-rs = "0.15"
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "wav", "all-codecs"] }
rubato = "0.14"
reqwest = { version = "0.12", features = ["stream"] }
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
