[package]
name = "neverwrite-native-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
neverwrite-diff = { path = "../../../crates/diff" }
neverwrite-index = { path = "../../../crates/index" }
neverwrite-types = { path = "../../../crates/types" }
neverwrite-vault = { path = "../../../crates/vault" }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
