[package]
name = "vault-ai-desktop"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug-logs = []

[lib]
name = "vault_ai_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "vault-ai-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2.10.1"
agent-client-protocol = { version = "=0.10.2", features = ["unstable"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "sync", "process", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
arboard = "3"
url = "2"

vault-ai-types = { path = "../../../crates/types" }
vault-ai-vault = { path = "../../../crates/vault" }
vault-ai-index = { path = "../../../crates/index" }
vault-ai-diff = { path = "../../../crates/diff" }
vault-ai-ai = { path = "../../../crates/ai" }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2"
notify = "7"
base64 = "0.22"
portable-pty = "0.9.0"
spellbook = "0.4.0"
reqwest = { version = "0.13.2", features = ["blocking", "rustls", "json"] }
sha2 = "0.10.9"
tiny_http = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.2", default-features = false, features = ["apple-native"] }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSSpellChecker"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSObjCRuntime", "NSRange", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.2", default-features = false, features = ["windows-native"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
keyring = { version = "3.6.2", default-features = false, features = ["linux-native-sync-persistent"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
